# personal-website-v2

./: .gitignore  Cargo.toml  README.md  app.css  build.rs  compose.yaml  dockerfile  dockerfile.postgres  dockerfile.website  example.env  init.sql  makefile  package.json  pnpm-lock.yaml  tailwind.config.js
posts/example/: body.md  metadata.yaml
src/: main.rs
src/routes/: asteroids.rs  blog.rs  cellular_automaton.rs  error404.rs  games.rs  home.rs  life.rs  mod.rs  post.rs  post_list.rs  projects.rs
src/utils/: blog.rs  mod.rs  post.rs  str.rs
static/: asteroids-wasm.wasm  cellular-automaton.wasm  key_controls.js  life.wasm
templates/: base.html
templates/components/: footer.html  post_list.html  tablist.html
templates/pages/: asteroids.html  blog.html  error404.html  games.html  home.html  post.html  projects.html
templates/pages/projects/: asteroids.html  cellular_automaton.html  life.html
