[package]
name = "personal_v2"
version = "0.1.0"
edition = "2021"
default-run = "website"

[[bin]]
name = "website"
path = "src/main.rs"

[[bin]]
name = "blog_util"
path = "src/bin/blog_util.rs"

[dependencies]
anyhow = "1.0.93"
askama = "0.12.1"
askama_axum = "0.4.0"
axum = "0.7.9"
sqlx = "0.8.2"
tokio = { version = "1.41.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
