[package]
name = "personal_v2"
version = "0.1.0"
edition = "2021"
default-run = "website"



[[bin]]
name = "website"
path = "src/main.rs"

[[bin]]
name = "blog_util"
path = "src/bin/blog_util.rs"

[dependencies]
anyhow = "1.0.93"
askama = { version = "0.12.1", features = ["markdown"] }
askama_axum = "0.4.0"
axum = { version = "0.7.9", features = ["macros"] }
axum-server = "0.7.1"
rustls-acme = { version = "0.12.1", features = ["axum"] }
serde = "1.0.215"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "time"] }
time = "0.3.36"
tokio = { version = "1.41.1", features = ["full"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
